Added new route for reloading user details of authUser
